--- a/src/app/pages/inicial/inicial.component.scss
+++ b/src/app/pages/inicial/inicial.component.scss
@@ -46,7 +46,8 @@ mat-card-content {
 }
 
 
-.inicio {
+:host {
+  overflow: auto;
   display: block;
   height: 100vh;
   width: 100vw;
